sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '(' expected but '[' found.
      if [j]>[j+1]
         ^